# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: __init__.py  cli.py  general_logic.py  play.py
brain_games/ind_game/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
