[tool.poetry]
name = "python-project-lvl1"
version = "1.0.1"
description = ""
authors = ["Vadim Viktorov <viktorov.vadimka@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
enter-leave = "^1.0.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
